--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -128,7 +128,7 @@
                 android:layout_height="38dp"
                 android:layout_marginStart="5dp"
                 android:gravity="start|center_vertical"
-                android:text="Video Stats"
+                android:text="Video Decoding Stats"
                 android:textColor="@color/colorWhite"
                 android:textSize="14sp" />
         </com.openipc.pixelpilot.osd.MovableLayout>
